tests/browser/syntaxError/a.js
syntax error
!@#$ not a valid file
